--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 			<div class="profile-card js-profile-card">
 			<div class="profile-card__img">
 				<a href="index1.html">
-			<img src="https://drive.google.com/file/d/1Fukso5un_B2wY-VxoCVzidD7RecZim9R/view?usp=sharing" alt="profile card">
+			<img src="https://drive.google.com/file/d/1Fukso5un_B2wY-VxoCVzidD7RecZim9R/view?usp=sharing" alt="">
 				</a>
 			</div>
 			<div class="profile-card__cnt js-profile-cnt">
