--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 			<div class="profile-card js-profile-card">
 			<div class="profile-card__img">
 				<a href="index1.html">
-			<img src="https://www.instagram.com/p/By_y8XDFA3t82LwoLb067SrZMDwv2hBXUklLX80/" alt="">
+			<img src="assets/img/suraj.png" alt="">
 				</a>
 			</div>
 			<div class="profile-card__cnt js-profile-cnt">
