--- a/about.html
+++ b/about.html
@@ -237,7 +237,7 @@
             <i class="fas fa-map-marked-alt text-primary mb-2"></i>
             <a href="#"><h3 class="text-uppercase m-0">SEM-8</h4></a>
             <hr class="my-4">
-            <div class="small text-black-50"><a href="#"><h4><b>Result</b> : 8.90 </h4></a></div>
+            <div class="small text-black-50"><a href="#"><h4><b>Result</b> : 8.90 cgpa</h4></a></div>
           </div>
         </div>
       </div>
