--- a/index1.html
+++ b/index1.html
@@ -85,7 +85,7 @@
                                  <div class="about-desc">
                                     <h2><b>About Me</b></h2>
                                     <hr>
-                                    <p>This is Suraj, a Front End developer from India. I have completed my Bachelor of Engineering from Computer Science and Engineering Department at Bapuji Institute of Engineering And Technology, Davangere.<br>Currently working as Network Enginner at TATA CONSULTANCY SERVICES.<br> like building new stuff and working with other people.</p>
+                                    <p>This is Suraj, a Front End developer from India. I have completed my Bachelor of Engineering from Computer Science and Engineering Department at Bapuji Institute of Engineering And Technology, Davangere. Currently working as Network Enginner at TATA CONSULTANCY SERVICES LIMITED, Bangalore. I like building new stuff and working with other people.</p>
                                  </div>
                               </div>
                            </div>
