--- a/index1.html
+++ b/index1.html
@@ -408,6 +408,18 @@
                                     </div>
                                  </div>
                               </article>
+                              <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+                                 <div class="timeline-entry-inner">
+                                    <div class="timeline-icon color-5">
+                                       <i class="fa fa-user"></i>
+                                    </div>
+                                    <div class="timeline-label">
+                                       <h2><a href="#">Cisco Certified Network Associate</a> <span>Dec 2020 - Feb 2021</span></h2>
+                                       <p><strong><a href="https://drive.google.com/file/d/1OsND1d3UTgdhuU9sclcjbIt4Pa5tDhCd/view?usp=sharing">Network Engineer</a></strong> </p>
+                                       <p></p>
+                                    </div>
+                                 </div>
+                              </article>
                               <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
                                  <div class="timeline-entry-inner">
                                     <div class="timeline-icon color-2">
