--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Intermediate College</h4>
                 <p class="mb-0 text-white-50"><b>Viswadeepthi Public School, Idukki</b></p><br>
-                <p class="mb-0 text-white-50"><b>Stream</b> : Science (PCM) <br><b>Marks</b> : 70.02 % <br><b>Passout</b> : 2016<br><b>Affiliated</b> : CBSE <br><b>State</b> : Kerala <br><b>Country</b> : India</p>
+                <p class="mb-0 text-white-50"><b>Stream</b> : Science (PCM) <br><a href="https://drive.google.com/file/d/1Fj7JHwbBX1_zjCbOoNm_e2euRGeuWi8j/view?usp=sharing"><b>Marks</b> : 70.02 % </a><br><b>Passout</b> : 2016<br><b>Affiliated</b> : CBSE <br><b>State</b> : Kerala <br><b>Country</b> : India</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -112,7 +112,7 @@
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">Matriculation</h4>
                 <p class="mb-0 text-white-50"><b>Viswadeepthi Public School, Idukki</b></p><br>
-                <p class="mb-0 text-white-50"><b>Marks</b> : 8.8 cgpa <br><b>Passout</b> : 2014<br><b>Affiliated</b> : CBSE <br><b>State</b> : Kerala <br><b>Country</b> : India</p>
+                <p class="mb-0 text-white-50"><a href="https://drive.google.com/file/d/1Os3VEVJ5ZUYNtMbvYIGxdEYthB-SPqE4/view?usp=sharing"><b>Marks</b> : 8.8 cgpa </a><br><b>Passout</b> : 2014<br><b>Affiliated</b> : CBSE <br><b>State</b> : Kerala <br><b>Country</b> : India</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
