--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
     <div id="about" class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">SURAJ</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5"> I am a Computer Science and Engineering undergraduate student at Bapuji Institute of Engineering And Technology, Davangere. I like building new stuff and work with other people.</h2>
+        <h2 class="text-white-50 mx-auto mt-2 mb-5"> Currently working as Network Engineer at TATA CONSULTANCY SERVICES LIMITED, Bangalore.</h2>
         <a href="index1.html" class="btn btn-primary js-scroll-trigger">PORTFOLIO</a>
       </div>
     </div>
